more some junit tests
