# src/main/java/spring/rest/shop/springrestshop/dto/task/TaskDetailsDTO.java
@@ -11,11 +11,16 @@ import java.util.stream.Collectors;
 
 @Data
 public class TaskDetailsDTO {
+    private String title;
+    private String description;
+
+    private TaskState status;
+    private List<CommentDTO> comments;
     private UserDTO creator;
     private List<UserDTO> executors;
-    private List<CommentDTO> comments;
-    private String title;
-    private TaskState status;
+
+
+
 
     public TaskDetailsDTO(){
 
@@ -25,6 +30,7 @@ public class TaskDetailsDTO {
         this.executors = task.getExecutors().stream().map(UserDTO::new).collect(Collectors.toList());
         this.comments = task.getComments().stream().map(CommentDTO::new).collect(Collectors.toList());
         this.title = task.getTitle();
+        this.description = task.getDescription();
         this.status = task.getStatus();
     }
 
